[package]
name = "rocksdb3"
version = "0.1.0"
authors = ["Xie Yanbo <xieyanbo@gmail.com>"]
description = "Python bindings for the Rust rocksdb crate"
repository = "https://github.com/xyb/rocksdb3"
homepage = "https://github.com/xyb/rocksdb3"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rocksdb = { version = "0.22.0", features = ["snappy", "lz4", "zstd", "zlib", "bzip2"] }
pyo3 = { version = "0.14.5", features = ["extension-module"] }
